--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,18 +1,21 @@
 {
-  "CONTRACT_ADDRESS": "0x0b18b900F7375AABDa00EEaC988116C33fb05BD2",
-  "SCAN_LINK": "https://polygonscan.com/token/0x0b18b900F7375AABDa00EEaC988116C33fb05BD2",
+  "CONTRACT_ADDRESS": "0x831F898460247dF676Fc8919ca62EBb643db7E2f",
+  "SCAN_LINK": "https://polygonscan.com/address/0x831F898460247dF676Fc8919ca62EBb643db7E2f",
   "NETWORK": {
     "NAME": "Polygon",
     "SYMBOL": "Matic",
     "ID": 137
   },
-  "NFT_NAME": "The Stripes NFT",
-  "SYMBOL": "TSNFT",
-  "MAX_SUPPLY": 992,
-  "WEI_COST": 4000000000000000000,
-  "DISPLAY_COST": 4,
+  "NFT_NAME": "YETIMANIA CLUB",
+  "SYMBOL": "YETI",
+  "MAX_SUPPLY": 999,
+  "WEI_COST": 10000000000000000000,
+  "DISPLAY_COST": 10,
   "GAS_LIMIT": 285000,
-  "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/the-stripes-nft",
+  "MARKETPLACE": "Opensea",
+  "MARKETPLACE_LINK": "https://discord.gg/TH2kjgp3",
+  "MARKETPLACE_LINK2": "http://opensea.io/collection/yetimaniaclub",
+
   "SHOW_BACKGROUND": true
+  
 }
